@@ -16,7 +16,7 @@
     <description>demo</description>
 
     <properties>
-        <java.version>22</java.version>
+        <java.version>21</java.version>
         <spring-ai.version>1.0.0-M4</spring-ai.version>
     </properties>
 
@@ -144,8 +144,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
+                    <source>21</source>
+                    <target>21</target>
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
@@ -156,7 +156,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.2</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
